--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -115,8 +115,6 @@
 	bottom: -23px;
 	border-radius: 20px;
 	left: 0px;
-	background: #DE3653;
-	background: #33afff;
 	background: #1b69ec;
 	position: absolute;
 }
@@ -129,6 +127,7 @@
   width: 100%;
   margin-bottom: 30px;
   margin-top: 40px;
+  display: none;
 }
 
 
