--- a/public/css/src/thumbnail/thumbnail.css
+++ b/public/css/src/thumbnail/thumbnail.css
@@ -1,9 +1,9 @@
 
 
-.app-thumbnail {position: fixed;z-index: 1000;top: 10px;right: 22%;display: none;}
+.app-thumbnail {position: fixed;display: flex;z-index: 1000;top: 10px;right: 22%;}
 
 .thumbnail__picture {width: 60px;height: 60px;border: 3px solid white;background: white;border-radius: 100px;overflow: hidden;text-align: center;cursor: pointer;}
 
-.thumbnail__picture img {width: 100%;}
+.thumbnail__picture img {}
 
-.thumbnail__name {font: 30px 'Creamy Script';color: white;position: absolute;top: 10px;left: 76px;min-width: 200px;}
+.thumbnail__name {font: 30px 'Creamy Script';color: white;position: absolute;top: 10px;left: 76px;white-space: nowrap;}
