--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -14,7 +14,7 @@
   <meta property="og:site_name" content="Meefore">
   <meta property="og:url" content="http://www.meefore.com/home">
   <meta property="og:image" content="http://res.cloudinary.com/radioreve/image/upload/v1456943482/landing_1.jpg">
-  <meta property="fb:app_id" content="1509405206012202">
+  <meta property="fb:app_id" content="<!-- build:fb-app-id -->1509405206012202<!-- endbuild -->">
 
   <meta property="og:description" content="L'application Meefore permet de faire des rencontres en participant à des before proches de chez soi.">
 
